@@ -2,13 +2,22 @@
   "alias": "get-python3",
   "automation_alias": "script",
   "automation_uid": "5b4e0237da074764",
+  "cache": true,
   "clean_files": [],
   "deps": [
     {
       "tags": "set,echo-off,win"
     }
   ],
-  "cache": true,
+  "local_env_keys": [
+    "CM_PYTHON_*"
+  ],
+  "new_env_only_keys": [
+    "CM_PYTHON_*",
+    "+LD_LIBRARY_PATH",
+    "+C_INCLUDE_PATH",
+    "+PATH"
+  ],
   "tags": [
     "get",
     "python",
